<resources>
    <string name="app_name">Study</string>
    <string name="action_settings">Settings</string>


    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="ActEfectiveNavi">ToEffectiveNavigation</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="viewpager">ViewPager</string>
    <string name="tostyledwidget">ToStyledWidget</string>
    <string name="tobullseye">toBullsEye</string>
    <string name="simplelistview">SimpleListView</string>
    <string name="viewpageract">ViewPagerAct</string>
    <string name="todropboxtest">toDropBoxTest</string>
    <string name="title_activity_drop_box_test">DropBoxTest</string>
    <string name="togoogledrivetest">toGoogleDriveTest</string>
    <string name="toOneDrive">toOnedriveTest</string>
    <string name="towebview">toWebView</string>
</resources>
