<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.osmond.study.MainActivity">

    <Button
        android:id="@+id/toStyledWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tostyledwidget" />

    <Button
        android:id="@+id/toBullsEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tobullseye" />

    <Button
        android:id="@+id/toSimpleListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/row_background"
        android:text="@string/simplelistview" />

    <Button
        android:id="@+id/toViewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/row_background"
        android:onClick="onUIButtonClick"
        android:text="@string/viewpageract" />

    <Button
        android:id="@+id/toDropboxTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/row_background"
        android:onClick="onUIButtonClick"
        android:text="@string/todropboxtest" />

    <Button
        android:id="@+id/toGoogleDriveTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/row_background"
        android:onClick="onUIButtonClick"
        android:text="@string/togoogledrivetest" />


</LinearLayout>
